[426/906] multiply: fix a compilation error with Apple compiler

Fix multiply_fragment_source to compile with Apple GLSL compiler.

https://bugzilla.gnome.org/show_bug.cgi?id=616748